[gd_scene load_steps=2 format=3 uid="uid://djf8k3xfn2wab"]

[ext_resource type="Script" path="res://scripts/ui/TurnOrderItem.gd" id="1_script"]

[node name="TurnOrderItem" type="PanelContainer"]
custom_minimum_size = Vector2(120, 60)
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Character"
horizontal_alignment = 1

[node name="ActionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Action 1/3"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Speed: 15"
horizontal_alignment = 1
